# Helix

./: .gitignore  AGENTS.md  README.md  bench_check.json  profile_check.json  pyproject.toml  raw_report.json  repeat_check.json  results_parallel_local.json  results_real_partial.json  results_semantic.json  results_token_minimization.json  setup.cfg  support_profile.json  support_raw.json  support_repeat.json
benchmarks/: benchmark_suite.yaml  generate_report.py  run_anthropic_bench.py  run_kv_overlap.py  run_local_demo.py  run_openai_bench.py  run_partial_change.py  run_repeated.py
config/: default_config.yaml  model_specs.yaml
docs/: architecture.md  quickstart.md
docs/ai/: AI_CONTEXT.md  ARCHITECTURE.md  BENCHMARKS_AND_VALIDATION.md  ENGINE_BEHAVIOR.md  ROADMAP_AND_PROMPTING.md
examples/: langgraph_support_agent.py
helix/: __init__.py  config.py  embeddings.py  exceptions.py  tokenization.py
helix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_benchmark_suite.sh  run_real_benchmarks.sh
tests/: __init__.py  conftest.py  test_report_generation.py
workflows/: customer_support_update.yaml  demo_chain.yaml  demo_execution_engine_showcase.yaml  demo_kv_overlap.yaml  demo_low_reuse.yaml  demo_minimization_regression.yaml  demo_parallel_pipeline.yaml  demo_partial_change.yaml  demo_real_partial.yaml  demo_real_repeat.yaml  demo_realistic_pipeline.yaml  demo_semantic_reuse.yaml  demo_showcase.yaml  demo_summarize.yaml  demo_token_minimization.yaml  incremental_execution_demo.yaml  parallel_execution_demo.yaml  semantic_execution_demo.yaml
(+94 files in other folders)
